[project]
name = "llm-convert-onnx-local-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "huggingface-hub>=0.33.4",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "nncf>=2.17.0",
    "numpy>=2.2.6",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "openvino>=2025.2.0",
    "optimum-intel>=1.24.0",
    "protobuf>=6.31.1",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "scipy>=1.16.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
